client/src/styles.css
body {
  background-color: rgb(11, 11, 11);
  color: white;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  text-overflow: none;
}
:root {
  --qa-element-width: 100%;
}

#RnR-par {
  display:flex;
  justify-content: center;
  margin-bottom: 100px;
}

#RnR {
  margin-top:30px;
  display: flex;
  width: 90%;
}
#ratings {
  width: 27%;
}
#space-between {
  width: 6%;
}
#reviews-sec {
  width: 67%;
}
#reviews {
  max-height: 720px;
  position: relative;
}
#rlistMap {
  max-height: 700px;
  overflow-y:scroll;
  margin-bottom: 30px;
}
#rlistMap::-webkit-scrollbar {
  display:none;
}
#rndtile {
  padding-bottom: 10px;
  border-bottom: 2px solid rgb(80,80,80);
  margin-bottom: 10px;
}
#rnrTitleCont {
  display:flex;
  justify-content: center;
}
#rnrTitle {
  width:90%;
  display: flex;
}
#rnd {
  display:flex;
  justify-content:space-between;
  align-items: center;
}
#rbutton-cont > button {
  height: 50px;
  justify-content: center;
  background-color: black;
  color:rgb(230,230,230);
  border: 1px solid rgb(80,80,80);
  cursor: pointer;
  margin-top:10px;
}
#rbutton-cont {
  display:flex;
  justify-content:space-between;
}
#revModal {
  position:fixed;
  transform: translate(-50%,-50%);
  top:50%;
  left:50%;
  width: 80%;
  height: 60%;
  z-index: 3;
  background: rgb(11,11,11);
  border: 2px solid rgb(230,230,230);
  border-radius: 10px;
  box-shadow: 4px 4px 4px 4px rgba(80,80,80,0.4);
  overflow-y: scroll;
  justify-content: center;
}
#revTest {
  position: relative;
  display:flex;
  justify-content: center;
  color:rgb(230,230,230);
  height: 100%;
}
#rform {
  margin-top: 30px;
  width:80%;
  height: 100%;
}
#reviewText {
  width: auto;
  height: auto;
  position: relative;
}
#reviewText > textarea {
  resize:vertical;
}

#rAddImages {
  margin-top:20px;
  display: flex;
  justify-content: space-evenly;
  position: relative;
}
#raddingImg {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  font-size: 30px;
  cursor: pointer;
}
#rimagediv {
  width: 60px;
  height: 60px;
  border:2px solid rgb(230,230,230);
  border-radius: 50%;
  display:relative;
  overflow:hidden;
}
#rimage {
  width:100%;
  height:100%;
  object-fit: cover;
}
#imgesc {
  position:absolute;
  border: 2px solid rgb(230,230,230);
  border-radius: 50%;
  font-size:10px;
  width: 12px;
  height:12px;
  text-align: center;
  background-color: red;
  color:rgb(230,230,230);
  top:0;
  right:0;
  margin:0;
  cursor: pointer;
}
#imgModal {
  position:absolute;
  transform: translate(-50%,-50%);
  left:50%;
  top: 150%;
  width: 400%;
  height: 150%;
  z-index: 5;
  background: rgb(11,11,11);
  border: 2px solid rgb(230,230,230);
  border-radius: 10px;
  box-shadow: 4px 4px 4px 4px rgba(80,80,80,0.4);
}
#imginput {
  display:flex;
  margin: 0 10px 0 10px;
}
#rimgurl {
  width:67%;
  height:100%;
}
#rimgurlenter {
  margin-bottom: 30px;
  color:rgb(230,230,230);
  background-color: rgb(11,11,11);
  border: 2px solid rgb(210,210,210);
  width: 25%;
  height: 100%;
  font-size: 12px;
  text-align: center;
  border-radius: 4px;
  cursor:pointer;
}
#testing {
  position: absolute;
  bottom: 1%;
  right:1%;
  cursor:default;
}
#rnic, #remail {
  display:grid;
}
#crStars > span {
  font-size: 26px;
  cursor:pointer;
}
#revChar {
  display: grid;
  grid-template-columns: repeat(5, 1fr) auto;
  align-items: center;
  margin: 0;
}
#revRec {
  display: flex;
  align-items: center;
}
#revRec > p, #revRec > #radioLabels > input {
  margin-right:10px;
}
#rchar {
  padding:0;
  width: auto;
  color: rgb(180,180,180);
}
#revChar > input, #revRec > input  {
  margin: 0 0 0 5px;
}

#radioLabels {
  height: auto;
  padding: 0;
  font-size: 12px;
  color:rgb(180,180,180);
}
#radioLabels > b {
  font-size: 16px;
  color:rgb(210,210,210);
}
#radioLabels > input {
  margin:0;
}

#rExit {
  position: absolute;
  width: 25px;
  height: 25px;
  border: 2px solid rgb(230,230,230);
  border-radius: 25px;
  color:rgb(230,230,230);
  background-color: rgb(11,11,11);
  cursor:pointer;
  right:1%;
  top:2%
}
#rbuttons {
  display: flex;
  justify-content: center;
  margin: 50px 0 50px 0;
}
#rSubmit {
  margin-bottom: 30px;
  color:rgb(230,230,230);
  background-color: rgb(11,11,11);
  border: 2px solid rgb(210,210,210);
  width: 30%;
  height: 60px;
  font-size: 20px;
  text-align: center;
  border-radius: 4px;
  cursor:pointer;
}

#revModal::-webkit-scrollbar {
  display:none;
}

.sorter {
  margin: 10px 0 20px 0;
}
#sorting {
  background-color:transparent;
  color: white;
  border:none;
  border-bottom:1.5px solid white;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
}
#sorting > option {
  background-color: rgb(11, 11, 11);
}
#revResp {
  background-color: rgb(80,80,80);
}

.qa {
  margin-left: 5%;
  margin-right: 5%;
}

.qa_ul {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  overflow: auto;
  max-height: 100vh;
  &::-webkit-scrollbar {
    display: none;
  }
}

.qa_search {
  height: 40px;
  width: var(--qa-element-width);
  font-size:12pt;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin-bottom: 20px;
  margin-top: 10px;
}

.question_head {
  width: var(--qa-element-width);
  display: flex;
}

.question_text {
  flex-grow: 4;
  font-weight: 700;
  font-size: 14pt;
  margin-bottom: 50px;
}

.question_spacer, .answer_spacer {
  padding-left: 5px;
  padding-right: 5px;
}

.q_helpful {
  display: flex;
  align-items: center;
  font-size: 10pt;
  padding-right: 1%;
}

.question_info, .answer_info{
  display: flex;
  align-items: center;
  font-size: 10pt;
}

.question {
  padding-left: 5px;
  border-bottom: 2px solid rgb(80,80,80);
  margin-bottom: 10px;
}

.answer_list_entry {
  margin-bottom: 5px;
  margin-top: 0;
  padding-left: 1%;
  border-bottom: 1px solid rgb(80,80,80);
}

.answer_info {
  display: flex;
  font-size: 10pt;
}

.answer_text {
  font-size: 14pt;
}

.question_button {
  height: 50px;
  width: 30%;
  font-size: 12pt;
  font-weight: 600;
}

.qa p{
    margin-bottom: 5px;
    margin-top: 5px;
    font-family: Arial, Helvetica, sans-serif;
}

#qa_title {
  font-size: 18pt;
}

#stars {
  display: flex;
  justify-content: center;
  align-items: center;
}
#partFilled {
  min-width: auto;
}

.answer_img {
  margin-right: 10px;
  height: 100px;
  width: auto;
}

.img_li, .add_answer_li {
  display: inline;
  position: relative;
}

#ratingBreakdown {
  display:flex;
  align-items:start;
}
#ravg {
  font-size: 46px;
  padding: 0;
  margin: 0;
}

.answer_helpful:hover, .answer_report:hover, .question_report:hover, .question_helpful:hover, .see_more_answers:hover, .collapse_answers, .add_answer:hover {
  cursor: pointer;
  text-decoration: underline;
}

.question_helpful, .answer_helpful {
  margin-left: 3px;
}

.answers {
  margin-bottom: 30px;
  overflow: auto;
  max-height: 50vh;
  &::-webkit-scrollbar {
    display: none;
  }
}

.see_more_answers, .collapse_answers {
  text-align: center;
  padding-top: 10px;
}

.add_modal {
  padding: 30px;
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: black;
  color: white;
  width: 50%;
  opacity: 100%;
  border-radius: 20px;
  border-style: solid;
  border-color: whitesmoke;
  z-index: 1;
}

.exit {
  color:gray;
  width: fit-content;
  font-size: xx-large;
  &:hover {
    color:red;
    cursor: pointer;
  };
}

.add_modal input,label,textarea{
  display: block;
  padding-bottom: 20px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.add_modal input,textarea {
  width:100%;
  margin-top: 5px;
  margin-bottom: 5px;
}

.add_modal *, .add_modal p{
  font-family: Arial, Helvetica, sans-serif
}

.modal_sub_title, .modal_title {
  padding-bottom: 10px;
  text-align: center;
  font-size: 14pt;
}

.blur{
  position: fixed;
  top: 0;
  left: 0;
  z-index: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(5px);
}

.modal_button {
  margin:0 auto;
  display:block;
  width: 33%;
  height: 50px;
  font-size: 14pt;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 500;
  border-radius: 10px;
}

#recPer, #revtxt, #rateBar {
  font-size: 12px;
}

#revheaders {
  font-size: 16px;
}
#helpful, #report {
  cursor:pointer;
}

#rbdown {
  display:flex;
  align-items: center;
}
#rbdown > #recPer, #rbdown > #revtxt, #rbdown > #rateBar {
  cursor: pointer;
}
#productBreakdown {
  margin-top: 30px;
}

#prodExp {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr;
  width:77.5%;
}
#pmid {
  justify-self:center;
}
#pend {
  justify-self:end;
}

#pdbar-cont{
  width:82.5%;
  display:flex;
  margin:0 0 5px 0;
}
#pdbar {
  position: relative;
  display:flex;
  height: 6px;
  width: 100%;
  background: linear-gradient(to right, grey 32.5%,transparent 32.5%, transparent 34%,grey 34%, grey 66.5%,transparent 66.5%, transparent 68%, grey 68%, grey 100%)
}

#overview {
  border: 1px solid red;
  display: grid;
  grid-template-columns:6fr 4fr;
  grid-template-rows: 40em;
  grid-gap: 8px;
  justify-content: center;
}

#images {
  margin: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel .thumb {
  border: 2px solid #00204a;
  border-radius: 2px;
}
.carousel .thumb:hover {
  border: 3px solid #00bbf0;
}
.carousel .thumb.selected {
  border: 3px solid #fdb44b;
}
.carousel-pic {
  max-width: 245px;
  height: auto;
  object-fit: cover;
}

#product-info-and-cart {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 5fr 4fr 4fr;
  grid-gap: 4px;
  padding: 10px;
  border: 1px solid blue;
}
#product-info-and-cart > div {
  border: 1px solid lightblue;
  display: flex;
  justify-content: center;
  align-items: center;
}

.add_answer_image {
  height: 70px;
  width: auto;
  border-style: solid;
  border-color: lightgray;
  border-radius: 5px;
  &:hover {
    backdrop-filter: blur(5px);
    border-color: red;
    border-width: 2px;
  }
}

.add_answer_li {
  margin-right: 10px;
}

.image_list {
  list-style-type: none;
  padding-left: 0;
  margin-top: 20px;
  margin-bottom: 20px;
}

.add_images_button {
  color: black;
  border-style: solid;
  background-color: gainsboro;
  border-radius: 5px;
  height: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 20%;
  text-align: center;
  vertical-align: middle;
  line-height: 10px;
}

.add_images_button:active {
  background-color: rgb(239, 236, 236);
}

.remove_image {
  width: fit-content;
  font-size: x-large;
  position: absolute;
  top: -70px;
  left: 0;
  color: gray;
  &:hover {
    color:red;
    cursor: pointer;
  }
}

